style.css
/* ... */
.bypostauthor {

}

.entry-meta {
	clear: both;
}

/*
 == Quick CSS styling tips ==

 You can start off in a rough direction with some minimal styles.
 See below for some tips. ;)


 == Want to have the whole site wrapped? ==

 Just fill the .container class with some background color to have a the whole site "wrapped".
 This works so easy because every main part is wrapped only once into a container class by bootstrap.
 Try out by decommenting the next line and go from there.

 .container { background: #f9f9f9; border-right: 1px solid #eee; border-left: 1px solid #eee; }


 == Want to wrap just the content and sidebar in Bootstrap style? ==

 That one is a great example to show that some things are much cleaner and easier to do via just adding some HTML classes.
 In this case, we will add just one CSS class "panel", look for example at the beginning in content.php!


 == Infinite Scrolling by Jetpack ==
 You can enable this cool feature by simply decommenting the lines below and make sure you use the same classes on the right place in your html..

/* Globally hidden elements when Infinite Scroll is supported and in use.
 * Older / Newer Posts Navigation (the pagination, must always be hidden), Theme Footer only when set to scrolling.. */

/*
.infinite-scroll .page-links,
.infinite-scroll.neverending .site-footer {
	display: none;
}
*/

/* When Infinite Scroll has reached its end we need to re-display elements that were hidden (via .neverending) before */

/*
.infinity-end.neverending .site-footer {
	display: block;
}
*/

/* Slide Menu Stuff  */
#menu {
    position: fixed;
    top: 0;
    left: -300px;
    width: 300px;
    height: 100%;
    -webkit-box-sizing: border-box;
       -moz-box-sizing: border-box;
            box-sizing: border-box;

    -webkit-transition: all .3s ease-in;
       -moz-transition: all .3s ease-in;
         -o-transition: all .3s ease-in;
            transition: all .3s ease-in;
    text-align: center;
    z-index:1;
    background-color: rgba( 66, 66, 71,1);
}
#menu .brand {
    line-height: 100px;
    font-size:1.9em;
    color: rgba(134,231, 60,1);
}
#menu ul {
    padding: 0;
}
.sidebar-2 {
    
}
#menu ul li a, .nav>li {
    display: block;
    height: 50px;
    -webkit-transition: all .3s ease;
       -moz-transition: all .3s ease;
         -o-transition: all .3s ease;
            transition: all .3s ease;
    text-align:left;
    text-decoration: none;
    text-transform: uppercase;
    color: rgba(134,231, 60,1);
    border-bottom: 1px solid rgba(103, 98, 94,0.4);
}
#menu ul li a:hover {
    color:rgba(255,158, 66,1);
}
#menu ul li:first-child a, .nav>li {
    border-top: 1px solid rgba(103, 98, 94,0.4);
}
body {
    overflow-x:hidden;
}
body.open #menu {
    left: 0;
}
.page-wrap, .site-header, .navbar-fixed-top {
    -webkit-box-sizing: border-box;
       -moz-box-sizing: border-box;
            box-sizing: border-box;

    -webkit-transition: all .3s ease-in;
       -moz-transition: all .3s ease-in;
         -o-transition: all .3s ease-in;
            transition: all .3s ease-in;
}
body.open .page-wrap, body.open .site-header, body.open .navbar-fixed-top {
    margin-left: 300px;
}

